src/objects/Letter_Print_Batch__c.object
<CustomObject>
    <fields>
        <fullName>Initialization_Status__c</fullName>
        <label>Initialization Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initialized_Batches__c</fullName>
        <label>Initialized Batches</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Letter_Type__c</fullName>
        <label>Letter Type</label>
        <picklist>
            <picklistValues>
                <fullName>Acknowledgment Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Failure Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Renewal Reminder for Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Renewal Reminder for Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Renewal Reminder for Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Renewal Reminder for Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Notes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subset_Batch_Size__c</fullName>
        <formula>CEILING( Total_Record_Count__c /  Total_Batch_Count__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subset Batch Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Batch_Count__c</fullName>
        <label>Total Batch Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Record_Count__c</fullName>
        <label>Total Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Letter Print Batch</label>
    <listViews>
        <fullName>Invoice_Letter_Batch</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Initialization_Status__c</columns>
        <columns>Letter_Type__c</columns>
        <columns>Subset_Batch_Size__c</columns>
        <columns>Total_Batch_Count__c</columns>
        <columns>Total_Record_Count__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Letter_Type__c</field>
            <operation>equals</operation>
            <value>Invoice_Letter</value>
        </filters>
        <label>Invoice Letter Batch</label>
    </listViews>
    <nameField>
        <label>Letter Print Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Letter Print Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>